--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,12 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    // "paths": {
+    //   "@components/*": [
+    //     "./src/components/*"
+    //   ]
+    // }
   },
   "include": [
     "src"
